src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>1BOG Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800 MySolar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addition 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addition 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdMediary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airtron (DES)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angie&apos;s List 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angie&apos;s List 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astrum AXP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BaltimoreM 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore Magazine 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore Sun 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore Sun 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore Sun 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore Sun 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore Sun 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore Sun 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beacon Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benjamin Franklin (DES)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bethesda 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bethesda Magazine 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Home 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Home 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BostonM 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BostonM 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Magazine 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Magazine 2</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source_New__c</fullName>
        <description>Mapped to the leads field Lead Source (New)</description>
        <label>Lead Source (New)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Notes__c</fullName>
        <label>Lead Source Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Reporting__c</fullName>
        <description>Lead Source Field added to provide Lead Source in Lead with Converted Lead Info Reports</description>
        <formula>Text( LeadSource )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lead Source Field added to provide Lead Source in Lead with Converted Lead Info Reports</inlineHelpText>
        <label>Lead Source (Reporting)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_To_Close_Days__c</fullName>
        <formula>IF( AND(IsClosed, IsWon),CloseDate -  DATEVALUE( Lead_Created_Date__c ),NULL)</formula>
        <label>Lead To Close (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_PPA_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease/PPA Fund</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8</booleanFilter>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Lease Administrator</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Controller</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>VP of Sales</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>VP of Operations</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator</value>
            </filterItems>
            <filterItems>
                <field>$Source.IsClosed</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.StageName</field>
                <operation>equals</operation>
                <value>Closed - Won, Closed - Lost</value>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Lease_Fund__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leasing_Option__c</fullName>
        <description>Which Lease Option is The Customer Choosing?</description>
        <inlineHelpText>Which Lease Option is The Customer Choosing?</inlineHelpText>
        <label>Leasing Option</label>
        <picklist>
            <controllingField>Financing_Type__c</controllingField>
            <picklistValues>
                <fullName>Low-Upfront - Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>One-Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Pay - Keep SRECs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-Upfront - Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Upfront - Monthly - Keep SRECs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Pay - Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPF – Complex Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPF – Astrum Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KW - Prepaid – Astrum Financed Arbitrage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KW – Prepaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KW – Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TG – Prepaid – Astrum Financed Arbitrage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TG – Prepaid – Astrum Financed Arbitrage – Already Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TG – Prepaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TG – Monthly – Astrum Financed Arbitrage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TG – Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed-Rate PPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio PPA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Major_Concerns_Questions__c</fullName>
        <label>Major Concerns/Questions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Notes__c</fullName>
        <label>Marketing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method_of_Contact__c</fullName>
        <label>Method of Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Type__c</fullName>
        <label>Module Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sanyo 215</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suntech 175</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suntech 175 Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suntech 180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suntech 180 Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suntech 185</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suntech 185 Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suntech 190</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suntech 225</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schuco 185</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schuco 230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharp 235</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunpower 210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunpower 215</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunpower 225 Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunpower 230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SolarWorld 235</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SolarWorld 245</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Not_Going_Solar_Count__c</fullName>
        <formula>IF(ISPICKVAL( Closed_Type__c , &quot;Not Going Solar&quot; ), 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Going Solar Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Closed_Won__c</fullName>
        <formula>IF(ISPICKVAL( StageName , &quot;Closed - Won&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Closed Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Modules__c</fullName>
        <label>Number of Modules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sales_Orders_Cancelled__c</fullName>
        <description>This field is populated by the Number_of_Sales_Orders_Cancelled Lookup Rollup Summary. It counts the child Sales Order records that have a status code of &quot;Canceled&quot;</description>
        <inlineHelpText>This field is populated by the Number_of_Sales_Orders_Cancelled Lookup Rollup Summary. It counts the child Sales Order records that have a status code of &quot;Canceled&quot;</inlineHelpText>
        <label>Number of Sales Orders Cancelled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sales_Orders__c</fullName>
        <description>This field is populated by the Number_of_Sales_Orders Lookup Rollup Summary. It counts the child Sales Order records</description>
        <inlineHelpText>This field is populated by the Number_of_Sales_Orders Lookup Rollup Summary. It counts the child Sales Order records</inlineHelpText>
        <label>Number of Sales Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objections_Obstacles__c</fullName>
        <description>What are the customer&apos;s objections to going solar?</description>
        <inlineHelpText>What are the customer&apos;s objections to going solar?</inlineHelpText>
        <label>Objections / Obstacles</label>
        <picklist>
            <picklistValues>
                <fullName>Not Stated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aesthetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affordability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Competitive Pricing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>On_Hold_Until__c</fullName>
        <description>The date to keep this lead on hold.</description>
        <inlineHelpText>The date to keep this lead on hold.</inlineHelpText>
        <label>On Hold Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_Index__c</fullName>
        <label>Opp Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Age_days__c</fullName>
        <description>Days Since Creation</description>
        <formula>TODAY() -DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days Since Creation</inlineHelpText>
        <label>Opportunity Age (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Competitor__c</fullName>
        <description>If Competitor Picklist Doesn&apos;t Include Competitor Name, Enter it Here</description>
        <inlineHelpText>If Competitor Picklist Doesn&apos;t Include Competitor Name, Enter it Here</inlineHelpText>
        <label>Other Competitor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Own_vs_Lease__c</fullName>
        <description>Does the customer own or lease the property?</description>
        <inlineHelpText>Does the customer own or lease the property?</inlineHelpText>
        <label>Own vs Lease</label>
        <picklist>
            <picklistValues>
                <fullName>Prefers Own</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefers Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Considering Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <description>The Role of the Opportunity Owner</description>
        <formula>Owner.UserRole.Name</formula>
        <inlineHelpText>The Role of the Opportunity Owner</inlineHelpText>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paired_Re_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paired Re-Survey?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pictometry_Design__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if a pictometry design is being done. Do NOT uncheck if a later field survey is done.</description>
        <label>Pictometry Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Lease_Candidate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Lease Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Timeline__c</fullName>
        <description>The timeline the customer is interested in purchasing a solar system.</description>
        <inlineHelpText>The timeline the customer is interested in purchasing a solar system.</inlineHelpText>
        <label>Project Timeline</label>
        <picklist>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longer/Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <description>Initially used in code to cut back on extra SOQL queries in triggers.</description>
        <formula>Property__r.Property_City__c</formula>
        <label>Property City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_County__c</fullName>
        <formula>TEXT(Property__r.Property_County__c)</formula>
        <label>Property County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Notes__c</fullName>
        <label>Property Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Office__c</fullName>
        <description>Current Company Office</description>
        <formula>TEXT(Property__r.Astrum_Office__c)</formula>
        <inlineHelpText>Current Company Office</inlineHelpText>
        <label>Property Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <formula>TEXT(Property__r.Property_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Zip__c</fullName>
        <description>Initially used in code to cut back on extra SOQL queries in triggers.</description>
        <formula>Property__r.Property_ZIP__c</formula>
        <label>Property Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Property__c.Property_Owner__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <description>Lead Source Publisher</description>
        <inlineHelpText>Lead Source Publisher</inlineHelpText>
        <label>Publisher</label>
        <picklist>
            <controllingField>Lead_Source_Detail__c</controllingField>
            <picklistValues>
                <fullName>CBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAQY 102.1 – Classic Rock – Springfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBBS 104.7 – Country – Syracuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBEC 1420 – News/Talk – Pittsfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBEEC 95.9 – Adult Contemporary – Pittsfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBEN 930 – News/talk – Buffalo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBFO 88.7 – NPR – Buffalo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBRK 1340 – Adult Contemporary – Pittsfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBZ-1030 – News – Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBZ 98.5 – Sports – Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WDRC 102.9 – Oldies – Hartford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEEI 850 (ESPN) – Sports – Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WENJ 97.3 – Sports – Atlantic City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGDJ 1300 – Talk – Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGNA 107.1 – Country – Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGR 550 – Sports – Buffalo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGY 810 – News/Talk – Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHTT 104.1 – Classic Hits – Buffalo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHUD 100.7 – Adult Contemporary – Poughkeepsie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHYN 560 – News/Talk – Springfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WKIP 1450 – News/Talk – Poughkeepsie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WOND 1400 – News/Talk – Atlantic City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WPG 1450 – Talk – Atlantic City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WPUR 107.3 – Country – Atlantic City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WPYX 106.1 – Classic Rock – Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WRCH 100.5 – Lite – Hartford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WRNQ 92.1 – Lite – Poughkeepsie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WROR 105.7 – Classic Hits – Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WRWD 107.3 – Country – Poughkeepsie</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QAS_Property_County__c</fullName>
        <description>Initially used in code to cut back on extra SOQL queries in triggers.</description>
        <formula>Property__r.QAS_Property_County__c</formula>
        <label>QAS Property County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quoted_System_Makeup__c</fullName>
        <description>System Makeup for System Design Associated with Selected System Design Quote</description>
        <formula>System_Design_Quote__r.System_Design__r.System_Makeup__c</formula>
        <inlineHelpText>System Makeup for System Design Associated with Selected System Design Quote</inlineHelpText>
        <label>Quoted System Makeup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quoted_System_Panel_Count__c</fullName>
        <description>Panel Count for System Design Associated with Selected System Design Quote</description>
        <formula>System_Design_Quote__r.System_Design__r.Panel_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Panel Count for System Design Associated with Selected System Design Quote</inlineHelpText>
        <label>Quoted System Panel Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quoted_System_Size_kW__c</fullName>
        <description>System Size (kW) for System Design Associated with Selected System Design Quote</description>
        <formula>System_Design_Quote__r.System_Design__r.Total_System_Size_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System Size (kW) for System Design Associated with Selected System Design Quote</inlineHelpText>
        <label>Quoted System Size (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReSurveyComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReSurveyComplete (Post-Sale)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_Designed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-Designed (Post-Sale)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Loss__c</fullName>
        <description>What is the reason for the loss?</description>
        <inlineHelpText>What is the reason for the loss?</inlineHelpText>
        <label>Reason for Loss</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Afford/Not Willing To Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Going Solar (Non-Financial Reason)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price/Offering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responsiveness/Timeliness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Referring_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account (if any) that referred this lead</description>
        <inlineHelpText>Account (if any) that referred this lead</inlineHelpText>
        <label>Referring Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referred Opportunities</relationshipLabel>
        <relationshipName>Referred_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Copy_of_Bill__c</fullName>
        <description>Did you request a copy of the customer&apos;s electric bill?</description>
        <inlineHelpText>Did you request a copy of the customer&apos;s electric bill?</inlineHelpText>
        <label>Request Copy of Bill</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Condition_Suspect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof Condition Suspect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Material__c</fullName>
        <description>What is the roof material made of?</description>
        <inlineHelpText>What is the roof material made of?</inlineHelpText>
        <label>Roof Material</label>
        <picklist>
            <picklistValues>
                <fullName>Asphalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standing Metal Seam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Corrugate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood Shake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Structure__c</fullName>
        <description>What is the customer&apos;s roof structure?</description>
        <inlineHelpText>What is the customer&apos;s roof structure?</inlineHelpText>
        <label>Roof Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Pitched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pitched - Steep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domed/Curved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complicated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SREC15_day__c</fullName>
        <label>SREC15-day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SREC30_day__c</fullName>
        <label>SREC30-day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SREC45_day__c</fullName>
        <label>SREC45-day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SRECResolved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if customer has HAS signed an SREC deal. If NOT checked, sales coord to resolve. Check once it is resolved (resolution includes customer saying &quot;NO SRECs with Astrum&quot; at which point, box should be checked. On 10/27/10, Anthony reversed checks starting from 9/12/10.</description>
        <label>SRECResolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SREC_Cash_Back__c</fullName>
        <label>SREC Cash Back</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SREC_Contract_Discount__c</fullName>
        <label>SREC Contract Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SREC_Contract_Duration_Years__c</fullName>
        <label>SREC Contract Duration (Years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SREC_Contract_Terms__c</fullName>
        <label>SREC Contract Terms ($/%)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>